# claude-skills

./: .gitignore  README.md
bibtest/: SKILL.md  __init__.py  main.py  pyproject.toml  requirements.txt
bibtest/bibtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
book-skills/: SKILL.md  agent-shared.css  agent_sweep.md
book-skills/agents/: 00-chapter-lead.md  01-curriculum-alignment.md  02-deep-explanation.md  03-teaching-flow.md  04-student-advocate.md  05-cognitive-load.md  06-example-analogy.md  07-exercise-designer.md  08-code-pedagogy.md  09-visual-learning.md  10-misconception-analyst.md  11-fact-integrity.md  12-terminology-keeper.md  13-cross-reference.md  14-narrative-continuity.md  15-style-voice.md  16-engagement-designer.md  17-senior-editor.md  18-research-scientist.md  19-structural-architect.md  20-content-update-scout.md  21-self-containment-verifier.md  23-project-catalyst.md  (+19 more)
fig2data/: SKILL.md  comprehensive_extract.py  extract_chart_data.py  extract_image_data.py  final_data_extraction.py  main.py  requirements.txt
gpu2runpod/: CLAUDE.md  SKILL.md  orphans.py  r2_manager.py  runpod_manager.py  runpod_runner.py  runpod_storage.py  setup_ssh.py  smoke_test.py
gpu2vast/: .gitignore  CLAUDE.md  README.md  SKILL.md  config_template.yaml  gpu_runner.py  orphans.py  r2_manager.py  setup_ssh.py  test_bert_small.py  test_comprehensive.py  test_e2e.py  test_e2e_full.py  test_full_e2e.py  test_gpt2_tiny.py  test_tf_e2e.py  train.py  vastai_manager.py
html2doc/: README.md  html2doc.py  reference.docx
paper-reviewer/: SKILL.md
(+175 files in other folders)
